# GlassShell

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Bpf/: CMakeLists.txt  SyscallTrace.bpf.c
Doc/: Overview.docx  代码规范.docx  版本控制规范.docx
doc/: 开发指南.docx
example/: CMakeLists.txt  monitorSystemCall.cpp  opensnoop.bpf.c  shellWrapper.cpp
include/GlassShell/Driver/EventTracer/: KernelEventTracer.h
include/GlassShell/Driver/Pty/: PtyDriver.h
include/GlassShell/EventBus/: EventBus.h
include/GlassShell/EventBus/ThreadPool/: Queue.h
src/: main.cpp
src/Driver/: CMakeLists.txt
src/Driver/EventTracer/: KernelEventTracer.cpp
src/Driver/Pty/: PtyDriver.cpp
src/EventBus/: CMakeLists.txt  EventBus.cpp
